# ShBekzodbek

./: README.md
c++ book with 2234 page/: CMakeLists.txt  main.cpp
polindrome sonlar/: CMakeLists.txt  main.cpp
sonlarni honasini chiqarish/: CMakeLists.txt  main.cpp
toq o'rinda turgan sonlar yig'indisi juft o'rinda turgan sonlar yig'indisiga teng bo'lganda ha aks holda yo'q/: CMakeLists.txt  main.cpp
yilning sonini kiritsa hafta kuni topadigan algoritm/: CMakeLists.txt  main.cpp
